site responsive for mobile and tablet

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "rewrites": [
+    { "source": "/resume", "destination": "/resume.html" }
+  ],
+  "redirects": [
+    { "source": "/resume.html", "destination": "/resume", "permanent": true },
+    { "source": "/index.html", "destination": "/", "permanent": true }
+  ]
 }
